--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <header
-    class="bg-mobile lg:bg-desktop lg:bg-right bg-no-repeat flex items-center bg-cover h-screen relative">
+    class="bg-mobile md:bg-mobile md:bg-auto lg:bg-desktop lg:bg-right bg-no-repeat flex items-center bg-cover h-screen relative">
     <nav
       class="bg-logoSite bg-no-repeat bg-contain bg-center w-full h-16 lg:w-60 lg:h-24 absolute top-32 lg:top-8 lg:left-28">
     </nav>
