--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="sans">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
 <body>
 
   <header
-    class="background-header flex items-center h-screen relative">
+    class="flex items-center relative">
     <nav
       class="bg-logoSite bg-no-repeat bg-contain bg-center logo w-full h-16 lg:w-60 lg:h-24 ">
     </nav>
