--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,9 @@
           <p class="mb-2">Where would you like to go?</p>
           <form id="form" class="relative w-full">
             <input type="search" id="search-input"
-              class="block p-2.5 w-full z-20 text-sm rounded-full border-2 border-[#E2E2E2]"
+              class="block p-2.5 w-full z-20 text-sm shadow-lg rounded-full border-2 border-[#E2E2E2]"
               placeholder="Type city name" required />
+              <p id="error" class="mt-1 text-[#FA9746] font-bold"></p>
             <button type="submit" id="searchButton"
               class="w-fit absolute top-1 right-1 text-sm font-medium text-white border-none">
               <img src="./assets/images/lente.svg" class="w-8" alt="" />
@@ -90,17 +91,6 @@
           class="bg-[#F6F9FF] lg:bg-inherit w-full lg:w-3/5 h-[80vh] lg:h-[80vh] md:h-[70vh] relative">
         </div>
         <div id="overall-container" class="bg-inherit w-full lg:w-4/12 h-[25vh] absolute lg:right-0 lg:top-0">
-          <svg id="overall" data-name="Livello 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 199.33 198.43">
-            <defs>
-              <style>
-                .cls-1 {
-                  fill: #1d1d1b;
-                }
-              </style>
-            </defs>
-            <path class="cls-1"
-              d="M199.29,90.3c.66,7.33-7.17,14.37-8.12,21.36s4.65,16.09,2.14,22.75-12.66,9.72-16.61,15.7-2.74,16.45-7.95,21.43-15.55,3.26-21.77,6.97-9.52,13.62-16.46,15.86-15.31-3.86-22.64-3.2-14.71,8.12-21.71,7.17-12.35-10.18-19.01-12.69c-6.77-2.55-16.68,.96-22.66-3s-6.65-14.48-11.62-19.68-15.42-6.29-19.14-12.5,.31-15.84-1.93-22.77S.69,115.46,.04,108.13s7.17-14.37,8.12-21.36-4.65-16.09-2.14-22.75,12.66-9.72,16.61-15.7,2.74-16.45,7.95-21.43,15.55-3.26,21.77-6.97,9.52-13.62,16.46-15.86,15.31,3.86,22.64,3.2S106.15-.86,113.14,.08s12.35,10.18,19.01,12.69,16.68-.96,22.66,3,6.65,14.48,11.62,19.68c4.95,5.18,15.42,6.29,19.14,12.5s-.31,15.84,1.93,22.77c2.17,6.72,11.13,12.25,11.78,19.58Z" />
-          </svg>
           <div class="lg:hidden bg-mobile-bottom bg-cover bg-no-repeat w-full h-[15vh] absolute top-0 -z-20"></div>
         </div>
       </div>
