--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,7 @@
         class="w-full lg:w-8/12 h-[105vh] md:h-screen lg:h-screen lg:absolute lg:right-0 lg:flex lg:items-center lg:justify-center lg:bg-categories bg-top lg:bg-contain lg:bg-right bg-no-repeat z-10">
         <div id="score-container"
           class="bg-[#F6F9FF] lg:bg-inherit w-full lg:w-3/5 h-[80vh] lg:h-[80vh] md:h-[70vh] relative">
+          <div id="tooltip" class=""></div>
         </div>
         <div id="overall-container" class="bg-inherit w-full lg:w-4/12 h-[25vh] absolute lg:right-0 lg:top-0">
           <div class="lg:hidden bg-mobile-bottom bg-cover bg-no-repeat w-full h-[15vh] absolute top-0 -z-20"></div>
